--- a/R0_tail/n8/1.1. N8.md
+++ b/R0_tail/n8/1.1. N8.md
@@ -1,198 +1,302 @@
-20.3.2011. Василиски.
-	Рыжий вошел в квартиру, арендованную их стаей. Единственный источник света лился из комнаты Крысы. Рыжий прошел через коридор скользя по стенам пальцами, завернул за поворот.
+Timeless damage management
 
-	Крыса сидела за своим столом с двумя мониторами. Рыжий подошел, став у них позади, скрипнув половицей, наблюдал как её глаза двигаются независимо друг от друга, каждый работает со своим монитором. Такого он за ней, ранее не замечал.
+В Никогда, ничего не остаётся, кроме как шагать вперёд.
+1.1.
 
-	Он двинулся в обход стола и заговорил:
-	- Сбежала. Вызвала такси. - Вопрос повис в воздухе. Будь он материальным жирные капли подозрений и сомнений капали бы им обоим за шиворот.
-	- Смерть дезориентирует.
-	- Что делаешь? - Он заглянул в мониторы. На одном она пишет код в файлике под плюсы, на другом листаются отчёты о сильнейших кейпах сша.
+20.3.2011. Василиски
 
-	Рыжий узнал файл предоставленный им, пару дней назад, кротом из Красной Рукавицы.
+Рыжий вошел в квартиру, арендованную их стаей. Единственный источник света лился из комнаты Крысы. Рыжий прошел через коридор, скользя по стенам пальцами, завернул за поворот.
 
-	Руки Крысы работали на разных клавиатурах независимо друг от друга. И это тоже было ново.
+Крыса сидела за своим столом с двумя мониторами. Рыжий подошел, став позади них; скрипнув половицей, он наблюдал, как её глаза двигаются независимо друг от друга, каждый работал со своим монитором. Такого он за ней ранее не замечал.
 
-	Крыса проигнорировала его вопрос и заговорила о своём:
-	- Срочно за 12 часов достань мне вот эту технику. Я дам тебе номер счёта для расчета. - Она мотнула подбородком на край стола, где лежал список покупок.
-	- Ты говорила что СКП и ЕАР всё отжали. - Он не узнавал состайницу. Отчуждённость и мрачность были для неё нормой. Но сейчас, это выходило на новый уровень.
-	- Я обналичила старые долги.
+Он двинулся в обход стола и заговорил:
 
-	Он задавался вопросом "- Что такого, сказал тебе Василиск на этот раз?" 
-	Он чувствовал присутствие остальных состайников, вся стая частично активировала свою излом-форму и слышала голос Рыжего, кроме Крысы. Она не использовала её во все, не прыгала в Лес, с тех пор как её оживили.
-21.3.2011. Улицы.
-	Джингуа был в мрачен. Как только Лунга повязали, в доки сунули свои хищные еблеты гайдзины из И88. Работать стало опасно. 
+— Сбежала. Вызвала такси.
 
-	Он считал, что АПП стоило зайти на территорию Империи и публично расстрелять тех кейпов, кого берут пули. Но командиры отказывались одобрять любые нападения на кейпов.
+Вопрос повис в воздухе. Будь он материальным, жирные капли подозрений и сомнений капали бы им обоим за шиворот.
 
-	Денег стало поступать меньше, бизнес страдал. Джингуа почуял горелое и в поисках альтернативного заработка, нашел в фриланс биржу с широким количеством, разнообразных заказов в Броктон-Бей.
+— Смерть дезориентирует.
 
-Там же он нашел предложение на испытание технарского устройства под названием "Нейросфера". Название примитивное и явно у кого-то краденое. Деньги предлагали хорошее, а подопытных, для такого устройства Джингуа мог найти. Оплату предлагали в два захода, аванс 20% вначале и 80% после отзыва и возвращения сферы в целостности и сохранности. Клиент имел высокий рейтинг доверия на данной бирже, но Джингуа всё равно заказал услугу "Гаранта"
+— Что делаешь?
 
-	Продавец утверждал что "Нейросфера" подключается к нервной системе человека и по запросу синтезирует вещество которое клиент пожелает. Не любое, спектр ограничен. Как расходный ресурс для производства, “Нейросфера” предпочитала кровь или протеин из магазинов спортпита.
+Он заглянул в мониторы. На одном она писала код в файлике под плюсы, на другом — листались отчёты о сильнейших кейпах США.
 
-	" - Мудила на той стороне экрана, явно дупля не жмёт в маркетинге. Бедный ублюдок." - думал Джингуа набирая номер телефона Мей, которая недавно получила повышение по службе, от хостес в хостеле, до администраторши в нарко-притоне.
+Рыжий узнал файл, предоставленный им пару дней назад кротом из Красной Рукавицы.
 
-22.3.2011. Злокозненные спасители.
-	Мистер Дрём отлип от монитора и сообщил Грибнику:
-	- Ну, тестирование идёт. Но я, пожалуй, применю этот продукт иначе.
-	- Базару. - Ответил Грибник выдыхая дым от подожженных каннабиноидных дрожжей. Их квадратик он держал в руке, а сам лежал на диване у себя в лаборатории-кухне-комнате-спальне по совместительству студии. - Но только не в моём городе.
-	- Что ты делаешь? - Спросил Мистер Дрём, крутящий в пальцах их изобретение "Нейросферу". Опираясь на кухонный стол напротив дивана, на котором возлежал укуривающийся Грибник, Дрём отпил вина из бутылки.
-	Фужеров или стаканов в квартире у его коллеги не было.
-	- Даю пизды наркомафиям этого города. - ответил укурыш.
+Руки Крысы работали на разных клавиатурах независимо друг от друга. И это тоже было ново. Крыса проигнорировала его вопрос и заговорила о своём:
+
+— Срочно, часов за двенадцать, достань мне вот эту технику. Я дам тебе номер расчётного счёта, — она мотнула подбородком на край стола, где лежал список покупок.
+
+— Ты же говорила, что СКП и ЕАР всё отжали.
+
+Он не узнавал состайницу. Отчуждённость и мрачность были для неё нормой. Но сейчас это выходило на новый уровень.
+
+— Я обналичила старые долги.
+
+Он задавался вопросом: "Что такого сказал тебе Василиск на этот раз?"
+
+Он чувствовал присутствие остальных состайников; вся стая частично активировала свою излом-форму и слышала голос Рыжего, кроме Крысы. Она не использовала её вовсе, не прыгала в Лес с тех пор, как её оживили.
+
+ 
+
+21.3.2011. Улицы
+
+Джингуа был мрачен. Как только Лунга повязали, в доки сунули свои хищные еблеты гайдзины из И88. Работать стало опасно.
+
+Он считал, что АПП стоило зайти на территорию Империи и публично расстрелять тех кейпов, кого берут пули. Но командиры отказывались одобрять любые нападения на кейпов.
+
+Денег стало поступать меньше, бизнес страдал. Джингуа почуял запах жареного и в поисках альтернативного заработка нашел в фрилансе биржу с широким количеством разнообразных заказов в Броктон-Бей.
+
+Там же он нашел предложение на испытание технарского устройства под названием "Нейросфера". Название примитивное и явно у кого-то краденое. Деньги предлагали хорошее, а подопытных для такого устройства Джингуа мог найти. Оплату предлагали в два захода, аванс в 20% вначале и 80% после отзыва и возвращения сферы в целостности и сохранности. Клиент имел высокий рейтинг доверия на данной бирже, но Джингуа всё равно заказал услугу "Гаранта".
+
+Продавец утверждал, что "Нейросфера" подключается к нервной системе человека и по запросу синтезирует вещество, которое клиент пожелает. Не любое, спектр ограничен. Как расходный ресурс для производства, "Нейросфера" предпочитала кровь или протеин из магазинов спортпита.
+
+"Мудила на той стороне экрана, явно дупля не жмёт в маркетинге. Бедный ублюдок", — думал Джингуа, набирая номер телефона Мей, которая недавно получила повышение по службе, от хостес в хостеле до администраторши в наркопритоне.
+
+ 
+
+22.3.2011. Злокозненные спасители
+
+Мистер Дрём отлип от монитора и сообщил Грибнику:
+
+— Ну, тестирование идёт. Но я, пожалуй, применю этот продукт иначе.
+
+— Базару нет, — ответил Грибник, выдыхая дым от подожженных каннабиноидных дрожжей. Их квадратик он держал в руке, а сам лежал на диване у себя в лаборатории-кухне-комнате-спальне и по совместительству студии. — Но только не в моём городе.
+
+— Что ты делаешь? — спросил Мистер Дрём, крутящий в пальцах их изобретение — "Нейросферу". Опираясь на кухонный стол напротив дивана, на котором возлежал укуривающийся Грибник, Дрём отпил вина из бутылки.
+
+Фужеров или стаканов в квартире у его коллеги не было.
+
+— Даю пизды наркомафиям этого города, — ответил укурыш.
+
+ 
+
 23.3.2011. Василиск
-	Мистер Дрём листал и рассматривал сканы мозг "воскресшей" пациентки, некоторые сканы приходилось поднимать на свет. Наконец он прокомментировал:
-	- У пациента активен ствол мозга, шишковидная железа и Корона, которая выросла и распространилась на все области мозга. Кора по большей части не активна, если не считать проросших в нее веток Корон.
-	Сплетница посмотрела на Бледного. Она не могла определиться с эмоцией, выбирая между насмешкой и отвращением:
-	- Ты ебал труп захваченный космическим паразитом, который убедил тебя в том что он твоя воскресшая бывшая. Как вы называете такие развлечения у себя в России?
-	- Пятничная вписка. - Ответил ей Рыжий, взоржав вместе с Мертвецом. Бледный ограничился уродской улыбкой.
 
-	Не умеет улыбаться - прокомментировала Сплетнице её сила.
+Мистер Дрём листал и рассматривал сканы мозг "воскресшей" пациентки; некоторые сканы приходилось поднимать на свет. Наконец он прокомментировал:
+
+— У пациента активны ствол мозга, шишковидная железа и Корона, которая выросла и распространилась на все области мозга. Кора по большей части не активна, если не считать проросших в нее веток Корон.
+
+Сплетница посмотрела на Бледного. Она не могла определиться с эмоциями, выбирая между насмешкой и отвращением:
+
+— Ты ебал труп, захваченный космическим паразитом, который убедил тебя в том, что он — твоя воскресшая бывшая. Как вы называете такие развлечения у себя в России?
+
+— Пятничная вписка, — ответил ей Рыжий, взоржав вместе с Мертвецом. Бледный ограничился уродской улыбкой.
+
+— Не умеет улыбаться, — прокомментировала Сплетнице её сила.
+
+ 
 
 25.3.2011. 4:56 Офицер Синелоа
-	С самого пробуждения в голове крутился мотив Лакримозы. Офицер Синелоа проснулся до будильника. Разминка. Медитация. Проверка на Когнитивные Искажения. Выйти на связь с командой, проверка на влияние Мастеров\Скрытников. Сканирование мозга переносным сканером и отправка утреннего отчёта в отдел аналитики, с рабочего ноута. Подключаясь к мобильной интернет-сети, он не глядя кликнул ок и далее.
+
+С самого пробуждения в голове крутился мотив Лакримозы. Офицер Синелоа проснулся до будильника. Разминка. Медитация. Проверка на Когнитивные Искажения. Выход на связь с командой, проверка на влияние Мастеров\Скрытников. Сканирование мозга переносным сканером и отправка утреннего отчёта в отдел аналитики с рабочего ноута.
+
+Подключаясь к мобильной интернет-сети, он не глядя кликнул "Ок" и "Далее".
+
+ 
 
 25.3.2011. 7:30 Робин Суойер
-	Скорость, трясся по ухабам, на скамейке, в фургоне СКП, в котором он чувствовал себя как дома. Профдеформация. Вот кто-то из его напарников пошутил и Скорость засмеялся в унисон, искренне, даже не пытаясь понять о чём шутка. Робин начал напевать себе мелодию с Лакримозы.
+
+Скорость трясся по ухабам на скамейке в фургоне СКП, в котором он чувствовал себя как дома. Профдеформация. Вот кто-то из его напарников пошутил, и Скорость засмеялся в унисон, искренне, даже не пытаясь понять, о чём шутка. Робин начал напевать себе мелодию с Лакримозы.
+
+ 
 
 25.3.2011. 7:33 Офицер Синелоа
-	Синелоа сел в фургон СКП. Здесь была его команда, они сидели на двух скамейках, друг напротив друга, справа на лево Первый номер был у Скорости, который был единственным кейпом сегодня в команде, водила иметь номер Шесть, техника звали Пятым, стрелок носил номер Четыре, второй и третий особых задач не имели. У Синелоа, был номер ноль.
 
-	Синелоа приступил к повторному псевдо-инструктажу от скуки и во избежание конфликтных разговоров, между вторым и третьим. Эти двое, не поделили что-то прошлой ночью. О напряжении в коллективе Синелоа, был осведомлён по тону разговоров в общем чате команды и по их взглядам.
+Синелоа сел в фургон СКП. Здесь была его команда, они сидели на двух скамейках, друг напротив друга, справа налево Первый номер был у Скорости, который был единственным кейпом сегодня в команде; водила имел шестой номер, техника звали пятым, стрелок носил номер четыре, второй и третий особых задач не имели. У Синелоа был номер ноль.
 
-	- В 1:13 полицейский патрульный сообщил на диспетчерский пульт СКП, о парачеловеческой активности биологического характера. Происшествие у жилого 30 этажного здания. Территория оцеплена. Над зараженным объектом установлен тент купол с воздушными фильтрами. Watchdog сказали что этого достаточно, чтобы избежать дальнейшего распространения. Криминалисты уже на месте, ситуация под контролем. Watchdog говорят что Панацея, сможет больше рассказать об организме с которым мы столкнулись. Watchdog нужно больше информации для дальнейшей работы, чтобы найти создателя этой биоты и найти, возможно другие источники.
+Синелоа приступил к повторному псевдо-инструктажу от скуки и во избежание конфликтных разговоров между вторым и третьим. Эти двое не поделили что-то прошлой ночью. О напряжении в коллективе Синелоа был осведомлён по тону разговоров в общем чате команды и по их взглядам.
 
-	Син замолчал. В голове крутилась какая-то мысль, нечто забытое. Но музыка снова увлекла его внимание за собой.
+— В час тринадцать полицейский патрульный сообщил на диспетчерский пульт СКП о парачеловеческой активности биологического характера. Происшествие у жилого тридцатиэтажного здания. Территория оцеплена. Над зараженным объектом установлен тент-купол с воздушными фильтрами. Watchdog сказали, что этого достаточно, чтобы избежать дальнейшего распространения. Криминалисты уже на месте, ситуация под контролем. Watchdog говорят, что Панацея сможет больше рассказать об организме, с которым мы столкнулись. Watchdog нужно больше информации для дальнейшей работы, чтобы найти создателя этой биоты и найти, возможно, другие источники.
+
+Син замолчал. В голове крутилась какая-то мысль, нечто забытое. Но музыка снова увлекла его внимание за собой.
+
+ 
 
 25.3.2011. 8:03 Емми Даллон
-	Панацея мухыкала себе под нос, мелодию Лакримозы.
 
-	Её рабочий телефон подключился к мобильной сети N8_LTE вместо привычной СКП_3g. Ей пришлось жать всякие "окей", "далее", "нет, вам нельзя просматривать мои личные фото" и бла бла бла...
-	
-	Перед ней затормозила хонда цивик. Панацея отвела взгляд от телефона. Задняя дверь открылась, внутри сидела Слава:
-	- Давай. - Пригласила та, свою сестру и отодвинулась уступая ей место.
+Панацея мурлыкала себе под нос мелодию Лакримозы.
 
-	Панацея выключила экран у телефона с недосмотренным видео Маркиза, которое ей предоставил его адвокат, когда она его нашла мучаясь вопросами утерянных воспоминаний. Она подобрала свои геройские мантии, села к Славе на заднее сиденье и вытащила наушники.
+Её рабочий телефон подключился к мобильной сети N8_LTE вместо привычной СКП_3g. Ей пришлось жать всякие "Ок", "Далее", "Нет, вам нельзя просматривать мои личные фото" и бла-бла-бла...
 
-	Когда их руки соприкоснулись, Панацея сразу поняла что у Славы был секс, менее часа назад. Она подавила укол ревности, достала из-под мантии prescription bottle и приняла своё лекарство.
+Перед ней затормозила "Хонда цивик". Панацея отвела взгляд от телефона. Задняя дверь открылась, внутри сидела Слава.
+
+— Давай, — пригласила та свою сестру и отодвинулась, уступая ей место.
+
+Панацея выключила экран у телефона с недосмотренным видео Маркиза, которое ей предоставил его адвокат, когда она нашла его, мучаясь вопросами утерянных воспоминаний. Она подобрала свои геройские мантии, села к Славе на заднее сиденье и вытащила наушники.
+
+Когда их руки соприкоснулись, Панацея сразу поняла, что у Славы был секс, менее часа назад. Она подавила укол ревности, достала из-под мантии prescription bottle и приняла своё лекарство.
+
+ 
 
 25.3.2011. 8:45 Бомба
-	Два дня назад, его любимая фриланс биржа начала подсовывать крайне странные заказы. День назад, он вспомнил как четырнадцати летняя Сара "охуевшая пизда" Пелхэм, вместе со своими подружками, закрыла его в женском туалете, предварительно сняв с него штаны. В тот день он возвращался домой бегом, светя труселями. 
 
-	После школы, он поступил на обучение в военную академию. Через три года обучения, он узнал что эта мразота стала почитаемой героиней, у неё есть семья и вообще идеальная жизнь.
+Два дня назад его любимая фриланс-биржа начала подсовывать крайне странные заказы. День назад он вспомнил, как четырнадцатилетняя Сара "охуевшая пизда" Пелхэм вместе со своими подружками закрыла его в женском туалете, предварительно сняв с него штаны. В тот день он возвращался домой бегом, светя труселями.
 
-	Его исключили из-за того что он провалил психологический тест.
+После школы он поступил на обучение в военную академию. Через три года обучения он узнал, что эта мразота стала почитаемой героиней, у неё есть семья и вообще идеальная жизнь.
 
-	Эта сука смогла на ебать всю систему, но не его. Он знал, знал её гнилое нутро, знал что создавать монстров у неё в ДНК.
+Его исключили из-за того, что он провалил психологический тест.
 
-	Лёжа в кровати, ожидая снов, он каждую ночь задавался вопросом, сколько еще таких, как он, ходят там среди людей, сколько она ещё создала? И не мог перестать думать о всём плохом что происходило в его жизни и о всём хорошем что происходило в жизни у этой МРАЗИ!!!!
+Эта сука смогла наебать всю систему, но не его. Он знал, знал её гнилое нутро, знал, что создание монстров у неё в ДНК.
 
-	Тогда с ним связался заказчик basilisk_n8...
+Лёжа в кровати, ожидая снов, он каждую ночь задавался вопросом: сколько еще таких, как он, ходят там среди людей, сколько она ещё создала? И не мог перестать думать о всём плохом, что происходило в его жизни, и о всём хорошем, что происходило в жизни у этой МРАЗИ!!!!
 
-	Сейчас. Он сидел в уютной двухкомнатной комнатушке, с убитыми хозяевами. Комната на пятом этаже. В наушнике миниатюрного плеера играет плей лист Моцарта.
+Тогда с ним связался заказчик basilisk_n8...
 
-	Его оплатой, за работу предоставленную basilisk_n8, стали снайперская винтовка с набором патронов BFG-50 и несколько магазинов под них, а главным предложением, стала возможность остановить порчу генофонда и возмездие как бонус.
+Сейчас. Он сидел в уютной двухкомнатной комнатушке, рядом с убитыми хозяевами. Комната на пятом этаже. В наушнике миниатюрного плеера играл плей-лист Моцарта.
 
-	Припав к биноклям, он смотрел из темноты квартиры на оцепленную полицией и СКП многоэтажку. Здесь по инфе заказчика должен появится отпрыск.
+Его оплатой за работу, предоставленную basilisk_n8, стали снайперская винтовка с набором патронов BFG-50 и несколько магазинов под них, а главным предложением стала возможность остановить порчу генофонда и возмездие как бонус.
 
-	- Сколько еще монстров вроде меня, создаст ваш порочный ген? - шептал себе мститель, в ожидании мишени - Я прерву эту эпидемию. Это не благодарная работа, но кто-то должен её делать.
+Припав к биноклям, он смотрел из темноты квартиры на оцепленную полицией и СКП многоэтажку. Здесь, по инфе заказчика, и должен был появится отпрыск.
 
-	Лазер-Шоу приземлилась в центре двора перед высоткой. Кристал Ева Пелхэм, в своём белом облегающем костюме с парой красиных стрелок и рубиновой повязкой для волос. 
+— Сколько еще монстров вроде меня создаст ваш порочный ген? — шептал себе мститель в ожидании мишени. — Я прерву эту эпидемию. Это неблагодарная работа, но кто-то должен её делать.
 
-	- Нет, не сейчас, опасно, я не успею скрыться и нельзя смотреть через прицел винтовки, а то их ищейки что-то заподозрят. Нужно немного подождать. - предостерёг себя мститель.
+Лазер-Шоу приземлилась в центре двора перед высоткой. Кристал Ева Пелхэм, в своём белом облегающем костюме с парой красных стрелок и рубиновой повязкой для волос.
+
+— Нет, не сейчас, опасно, я не успею скрыться; и нельзя смотреть через прицел винтовки, а то их ищейки что-то заподозрят. Нужно немного подождать, — предостерёг себя мститель.
+
+ 
 
 25.3.2011. 8:50 Кристал Пелхэм
-	Лазер-Шоу парила в воздухе на высоте третьего этажа. Перед ней была старая тридцатиэтажка. Человеческий муравейник. Внизу, прилегающий к ней внутренний двор был ограждён кирпичным забором. 
 
-	Лазер-Шоу приземлилась в центре внутреннего дворика, с двух сторон завешенного сушащимся на сушилках постельным бельём. Перед домом было свободное пространство в несколько метров. Справа, между домом и сушилками был установлен, карантинный купол. Полицейские её узнали и не стали к ней подходить, а значит они были осведомлены о том, что ей здесь можно быть, их уже оповестили. Лазер-Шоу видела натянутую желтую - полицейскую линию на входе во двор. Здание находилось в оцеплении.
+Лазер-Шоу парила в воздухе на высоте третьего этажа. Перед ней была старая тридцатиэтажка. Человеческий муравейник. Внизу прилегающий к ней внутренний двор был ограждён кирпичным забором.
 
-	Заказчица, Клэр, вышла из подъезда как только героиня коснулась асфальта.
+Лазер-Шоу приземлилась в центре внутреннего дворика, с двух сторон завешенного висящим на сушилках постельным бельём. Перед домом было свободное пространство в несколько метров. Справа, между домом и сушилками, был установлен карантинный купол. Полицейские её узнали и не стали к ней подходить, а значит, они были осведомлены о том, что ей здесь можно быть, их уже оповестили. Лазер-Шоу видела натянутую желтую — полицейскую — линию на входе во двор. Здание находилось в оцеплении.
 
-	Клэр, стройная и молодая девушка в тесном ей деловом костюме. Заказ на чистку от грибов, она сделала позвонив сегодня в шесть утра, на рабочий телефон юрфирмы  Керол Даллон. Предоплата поступила насчёт “Новой Волны” спустя полчаса с момента как Керол, оговорила детали услуг предоставляемых её дочерью.
+Заказчица, Клэр, вышла из подъезда, как только героиня коснулась асфальта.
+
+Клэр, стройная и молодая девушка, в тесном ей деловом костюме. Заказ на чистку от грибов она сделала, позвонив сегодня в шесть утра на рабочий телефон юрфирмы Керол Даллон. Предоплата поступила на счёт "Новой Волны" спустя полчаса с того момента, как Керол оговорила детали услуг, предоставляемых её дочерью.
+
+ 
 
 25.3.2011. 8:50 Панацея
-	Панацея вошла в палатку без противогаза и перчаток, только оставила свой халат снаружи. Клэр, Слава, Рыцарь, Лазер-Шоу, Синелоа и неизвестный офицер, были экипированы в соответствии с протоколами.
-	Команда прошла комнату дезинфекции. Внутри палатки асфальт, плесень, грибы и три поедаемых трупа.
 
-	Панацея вдыхала споры и микотоксикозы. Преобразовывала их в грибных-паразитов нацеленных на истребление своих собратьев по ДНК и выдыхала их обратно.
+Панацея вошла в палатку без противогаза и перчаток, только оставила свой халат снаружи. Клэр, Слава, Рыцарь, Лазер-Шоу, Синелоа и неизвестный офицер были экипированы в соответствии с протоколами.
 
-	- Что здесь произошло? - Спросила Панацея присаживаясь на корточки и касаясь грибницы.
-	- Нещастный случай, много свидетелей, подтверждение криминалистов. - ответил героине Синелоа.
-	- А еще вечеринка - вклинилась Клэр, — по поводу исцеления подруги Грибника и моей бывшей работодательницы Моны.
-	- Мона это та которая их Перекидышей? - Переспросил Синелоа.
-	- Да. Прядь. - Услужливо подсказала Клэр. - Но я сразу от них уволилась как узнала какие они плохие.
-	Панацея прервала не интересный ей "допрос" солдафона:
-	- Прядь не была исцелена. От смерти не исцеляются. - Панацея хмурилась. Грибная сеть которой она касалась, разделилась, децентрализовалась. Чтобы убить всех, придётся около часа, здесь ползать и всё облапать.
-	- Ну значит они сделали невозможное. - Упорствовала нахалка.
-	- Что за они? - Синелоа с интересом разглядывал один из обглоданных грибами черепов.
-	- Грибник, Мистер Дрём и Черепушка. Я сообщила всё что, знала на горячую линию СКП, а потом еще и в допросной. У меня даже есть номер моего дела. - Клэр расстегнула комбинезон на груди, вытащила ручку, визитку, написала на ней цифры и протянула офицеру.
-	- Спасибо сам найду.
-	- Но может вам или вашим близким потребуется жильё, я хороший риелтор и великолепный астролог. - Синелона принял визитку и оставил её у себя в перчатке.
+Команда прошла комнату дезинфекции. Внутри палатки — асфальт, плесень, грибы и три поедаемых трупа.
 
-	- Я должна её перепроверить, что она не опасна. Её срочно нужно найти. - Панацея обратилась к офицеру полуобернув голову в его направлении, но продолжая свою работу с грибами.
-	- Нет необходимости. Она сдалась в СКП, вчера утром. - За этим ответом офицера, последовал удовлетворённый кивок Панацеи. 
+Панацея вдыхала споры и микотоксикозы. Преобразовывала их в грибных паразитов, нацеленных на истребление своих собратьев по ДНК, и выдыхала их обратно.
 
-Ситуация была под контролем. 
+— Что здесь произошло? — спросила Панацея, присаживаясь на корточки и касаясь грибницы.
 
-- Я его знала, несколько месяцев назад, он обманом воспользовался моей силой, чтобы создать себе улучшенную систему кровообращения. Вероятно чтобы более эффективно упарыватся. - Героиня не сдержала ироничную улыбку. Никто ей не ответил. 
+— Несчастный случай, много свидетелей, подтверждение криминалистов, — ответил героине Синелоа.
 
-	- Я создаю паразита Анти-грибник. Он выследит своего злого двойника, съест и умрёт. Ничем кроме грибоподобных Грибника, мой паразит питаться не сможет. Корона еще жива. Точнее её кусочки. Оно питалось людьми погибшими вместе с Грибником. В здании есть еще колонии. Самая многочисленная на крыше.
+— А еще вечеринка, — вклинилась Клэр, — по поводу исцеления подруги Грибника и моей бывшей работодательницы Моны.
 
-	Панацея находит три крупных узла нейронов, завёрнутых в грибную обёртку которую она помогла создать несколько месяцев назад. Система Целитель, она вспомнила название. Один из узлов спрятан в черепе. Панацея подходит к нему и переворачивает его ножкой. Садится на носочках рядом, разглядывая череп полностью объеденный грибами. Касается грибов на черепе и узнаёт...
+— Мона — это, та которая из Перекидышей? — переспросил Синелоа.
 
-	Сквозь подушечки её пальцев впитывается чистейший Лизергин, она думает про подходящие метаболит...
+— Да. Прядь, — услужливо подсказала Клэр. — Но я сразу от них уволилась, как только узнала, какие они плохие.
 
-	Она чует запах болота и пряностей... Вокруг как по щелчку пальцев наступает ночь. Она на высоте тридцати этажей. В воздухе. Она падает. Ужас и холод в кишках. Жар и барабаны в висках и ушах. Она чувствует мир с точки зрения каждой митохондрии в своём взрослом мужском теле. Дезориентация. Тонкие фрактальные волны заполняют каждую клетку. Он вытаскивает из кармана горсть чёрных шариков заряженных паутино-подобным-излучением и прозрачный красный кристалл с жидкостью плещущейся внутри. Всё это он с трудом заталкивает себе в рот и перед ударом об землю группируется в бомбочку.
+Панацея прервала неинтересный ей "допрос" солдафона:
+
+— Прядь не была исцелена. От смерти не исцеляются.
+
+Панацея хмурилась. Грибная сеть, которой она касалась, разделилась, децентрализовалась. Чтобы убить всех, придётся около часа здесь ползать и всё облапать.
+
+— Ну, значит, они сделали невозможное, — упорствовала нахалка.
+
+— Что за "они"? — Синелоа с интересом разглядывал один из обглоданных грибами черепов.
+
+— Грибник, Мистер Дрём и Черепушка. Я сообщила всё, что знала, на горячую линию СКП, а потом еще и в допросной. У меня даже есть номер моего дела, — Клэр расстегнула комбинезон на груди, вытащила ручку, визитку, написала на ней цифры и протянула офицеру.
+
+— Спасибо, сам найду.
+
+— Но, может, вам или вашим близким потребуется жильё; я хороший риэлтор и великолепный астролог.
+
+Синелоа принял визитку и оставил её у себя в перчатке.
+
+— Я должна её перепроверить, что она не опасна. Её срочно нужно найти, — обратилась Панацея к офицеру, слегка повернув голову в его направлении, но продолжая свою работу с грибами.
+
+— Нет необходимости. Она сдалась в СКП вчера утром.
+
+За этим ответом офицера последовал удовлетворённый кивок Панацеи.
+
+Ситуация была под контролем.
+
+— Я его знала, несколько месяцев назад он обманом воспользовался моей силой, чтобы создать себе улучшенную систему кровообращения. Вероятно, чтобы более эффективно упарываться, — Героиня не сдержала ироничную улыбку.
+
+Никто ей не ответил.
+
+— Я создаю паразита Анти-грибник. Он выследит своего злого двойника, съест и умрёт. Ничем, кроме грибоподобных Грибника, мой паразит питаться не сможет. Корона еще жива. Точнее, её кусочки. Оно питалось людьми, погибшими вместе с Грибником. В здании есть еще колонии. Самая многочисленная — на крыше.
+
+Панацея нашла три крупных узла нейронов, завёрнутых в грибную обёртку, которую она помогла создать несколько месяцев назад. Система Целитель, вспомнила она название. Один из узлов был спрятан в черепе. Панацея подошла к нему и перевернула ножкой. Присела рядом на корточки, разглядывая череп, полностью объеденный грибами. Коснулась грибов на черепе и узнала...
+
+Сквозь подушечки её пальцев впитывался чистейший Лизергин, она думала про подходящие метаболиты...
+
+Она почуяла запах болота и пряностей... Вокруг как по щелчку пальцев наступила ночь. Она оказалась на высоте тридцати этажей. В воздухе. Она падала. Ужас и холод в кишках. Жар и барабаны в висках и ушах. Она чувствовала мир с точки зрения каждой митохондрии в своём взрослом мужском теле.
+
+Дезориентация. Тонкие фрактальные волны заполняют каждую клетку. Он вытаскивает из кармана горсть чёрных шариков, заряженных паутино-подобным-излучением, и прозрачный красный кристалл, с жидкостью, плещущейся внутри. Всё это он с трудом заталкивает себе в рот и перед ударом об землю группируется в бомбочку.
+
+ 
 
 25.3.2011. 9:07 Емми Далон
-	Она приходит в себя за пределами палатки. Применяет дыхательные упражнения, про которые ей рассказали на собрании "проблемных паралюдей, которые должны справляться со своими дерьмом, а не быть геморроем для директора СКП", как назвала их Софи.
 
-	Панацея вытесняет из воображения галлюцинацию, о такой реальной боли, от удара об землю, фокусируя внимание на симфонии Лакримозы.
+Она пришла в себя за пределами палатки. Применила дыхательные упражнения, про которые ей рассказали на собрании "проблемных паралюдей, которые должны справляться со своим дерьмом, а не быть геморроем для директора СКП", как назвала их Софи.
 
-	Она безучастно наблюдает как человек в снаряге СКП берёт у неё кровь в ампулу. Она находит решение для метаболизма и устранения эффектов ЛСД. Создаёт решение из грибов и микробов у себя на ладонях и слизывает решение, тщательно вылизывая каждое своё запястье, каждый свой палец.
+Панацея вытеснила из воображения галлюцинацию о такой реальной боли от удара об землю, фокусируя внимание на симфонии Лакримозы.
 
-	Она рывком поднимается c носилок на которые была уложена. Её взгляд фокусируется и пробегает по членам "Новой Волны" и офицере Синелоа, рука которого покоится на кобуре, у него на поясе. Она вспоминает монстров которых, им приходилось побеждать, которых эта солдафонская пукалка не остановит:
-	- Его нужно немедленно остановить! Оно уже ело людей, он умер, то что осталось это не человек. Они слишком быстры для обычных грибов, ими надо срочно заняться, это угроза эпидемии. - Она чувствует как волосы на руках встают дыбом. У неё есть миссия, сверхважная миссия. Спасение человечества. - И мне нужно срочно созвонится с ответственным за Прядь и убедится что приняты удовлетворительные меры по её изоляции. Но я забыла свой телефон в машине.
+Она безучастно наблюдала, как человек в снаряге СКП берёт у неё кровь в ампулу. Она нашла решение для метаболизма и устранения эффектов ЛСД, создала решение из грибов и микробов у себя на ладонях и слизнула решение, тщательно вылизывая каждое своё запястье, каждый свой палец.
 
-	Закончила она, смущённо потупив лицо вниз и растеряв весь свой пыл. Её щеки начинали пылать.
-	
-	Она услышала как в изоляционном тенте, заливают грибы удерживающей пеной. Собралась поднять этот вопрос, когда Рыцарь протянул ей свой телефон.
+Она рывком поднялась c носилок, на которые была уложена. Её взгляд сфокусировался и пробежал по членам "Новой Волны" и офицере Синелоа, рука которого покоилась на кобуре у него на поясе. Она вспомнила монстров, которых им приходилось побеждать, которых эта солдафонская пукалка не остановит.
 
-	Она нашла нужный ей контакт по первым цифрам и прежде чем нажать вызов сказала:
+— Его нужно немедленно остановить! Оно уже ело людей, он умер; то, что осталось, это не человек. Они слишком быстры для обычных грибов, ими надо срочно заняться, это угроза эпидемии.
 
-	- Я создала паразита, который уничтожит там всё, но для верности растворите пену и сожгите там всё.
-	- Мы вызвали специалиста. - Сказал Синелоа и отошел в сторону для разговора со своими людьми.
+Она чувствовала, как волосы на руках встают дыбом. У неё была миссия, сверхважная миссия. Спасение человечества.
+
+— И мне нужно срочно созвониться с ответственным за Прядь и убедиться, что приняты удовлетворительные меры по её изоляции. Но я забыла свой телефон в машине, — закончила она, смущённо потупив взгляд и растеряв весь свой пыл. Её щеки начинали пылать.
+
+Она услышала, как в изоляционном тенте заливают грибы удерживающей пеной. Собралась поднять этот вопрос, когда Рыцарь протянул ей свой телефон.
+
+Она нашла нужный ей контакт по первым цифрам и, прежде чем нажать вызов, сказала:
+
+— Я создала паразита, который уничтожит там всё, но для верности растворите пену и сожгите все остатки.
+
+— Мы вызвали специалиста, — сказал Синелоа и отошел в сторону для разговора со своими людьми.
 
 Панацея силилась вспомнить что-то очень важное, пока в трубке звучали гудки, но потом трубку подняли.
 
+ 
+
 25.3.2011. 9:13 Виктория Даллон
-	Взяв у Рыцаря ключи, Слава вернулась к машине и на заднем сидении, нашла телефон сестры. Её собственный был разряжен. Они с Дином, сегодня ночью, долго слушали музыку и совсем увлеклись друг другом. Впрочем, Виктория готова была взять часть вины на себя, за чрезмерное использование ауры. 
 
-	Она бросила взгляд в сторону сестры. Та сейчас говорила по телефону. Вики обпёрлась спиной на машину и разлочила телефон сестры. Ей сразу открылось видео стоящее на паузе.
+Взяв у Рыцаря ключи, Слава вернулась к машине и на заднем сидении нашла телефон сестры. Её собственный был разряжен. Они с Дином сегодня ночью долго слушали музыку и совсем увлеклись друг другом. Впрочем, Виктория готова была взять часть вины за чрезмерное использование ауры на себя.
 
-	Мужчина. Взрослый. Ухоженный. В тюремной робе с надписью на груди. Злодей. В допросной СКП. Слава бросила взгляд на сестру. Жесты той, выдавали нервозность. До Славы долетали её повышенные интонации.
+Она бросила взгляд в сторону сестры. Та сейчас говорила по телефону. Вики опёрлась спиной на машину и разлочила телефон сестры. Ей сразу открылось видео, стоящее на паузе.
 
-	"- Казалось бы Груповая терапия и лекарства должны были дать противоположный результат” - думала она.
+Мужчина. Взрослый. Ухоженный. В тюремной робе с надписью на груди. Злодей. В допросной СКП. Слава бросила взгляд на сестру. Жесты той выдавали нервозность. До Славы долетали её повышенные интонации.
 
-	Слава кликнула плей.
-	
-	- Дорогая Амелия я придерживался своих принципов и правил до последнего, это сделало меня тем кто я есть. И из-за этого, теперь, скорее всего, отправлюсь в Клетку. Если бы можно было вернутся и всё изменить, единственное, что я изменил бы. Я бы приложил больше усилий для убийства Всеотца, чтобы теперь не переживать, о том что он может попытаться отомстить мне, напав на тебя. Надеюсь у тебя, так же будет хороший кодекс. Я надеюсь они защитят тебя, они должны защищать тебя. Таков наш с ними, негласный договор. - Мужчина начал делать паузы между каждым коротким предложением. - Ты моя страсть. Имей больше терпения. Надеюсь у тебя будут чудесные силы.
+"Казалось бы, групповая терапия и лекарства должны были дать противоположный результат", — подумала она.
 
-	Видео закончилось. Виктория кипела от гнева и не могла понять на кого или на что злится. Она присмотрелась к мужчине на видео. У него были каштановые волосы и глаза как у сестры.	
-	Вдруг на весь экран выскочило сообщение о подключении к новой мобильной сети. Слава в раздражении со всем согласилась. Подлетела к сестре. Выключила экран и вручила ей её телефон, заметив у сестры в глазах испуг.
+Слава кликнула "Плей".
+
+— Дорогая Амелия, я придерживался своих принципов и правил до последнего, это сделало меня тем, кто я есть. И из-за этого теперь, скорее всего, я отправлюсь в Клетку. Если бы можно было вернуться и всё изменить, единственное, что я изменил бы, это приложил больше усилий для убийства Всеотца, чтобы теперь не переживать о том, что он может попытаться отомстить мне, напав на тебя. Надеюсь, у тебя также будет хороший кодекс. Я надеюсь, они защитят тебя, они должны защищать тебя. Таков наш с ними, негласный договор.
+
+Мужчина начал делать паузы между каждым коротким предложением.
+
+— Ты моя страсть. Имей больше терпения. Надеюсь, у тебя будут чудесные силы.
+
+Видео закончилось. Виктория кипела от гнева и не могла понять, на кого или на что злится. Она присмотрелась к мужчине на видео. У него были каштановые волосы и глаза как у сестры.
+
+Вдруг на весь экран выскочило сообщение о подключении к новой мобильной сети. Слава в раздражении со всем согласилась. Подлетела к сестре. Выключила экран и вручила ей её телефон, заметив у сестры в глазах испуг.
+
+ 
 
 25.3.2011. 9:16 Робин Суойер
-	- База не выходит на связь. Что-то с сетью. И еще, появилась не санкционированная мобильная сеть. - Техник говорил это Скорости, не отрываясь от своего планшета. 
 
-	- Проблемы с сетью у всей команды. Я мотнусь в радиус ретрансляторов и свяжусь с базой. - с этими словами Скорость перешел в излом-форму и исчез оставив за собой, тающий красный шлейф.
+— База не выходит на связь. Что-то с сетью. И еще появилась несанкционированная мобильная сеть, — Техник говорил это Скорости, не отрываясь от своего планшета.
 
-	База вышла на связь, когда он пересёк границу Доков в Центр.
+— Проблемы с сетью у всей команды. Я мотнусь в радиус ретрансляторов и свяжусь с базой.
 
-	Директор отделения Эмили Пиггот. Сообщила ему что он должен немедленно направится в изоляцию и пройти процедуру подготовки к "Изятию из карантинной зоны".
+После этих слов Скорость перешел в излом-форму и исчез, оставив за собой тающий красный шлейф.
 
-Тогда он спросил её “- Из-за чего карантин?” и получил в ответ “- Какое сегодня число боец?”. Тогда он честно сказал что не может вспомнить.
+База вышла на связь, когда он пересёк границу Доков в Центр.
+
+Директор отделения Эмили Пиггот сообщила ему, что он должен немедленно направиться в изоляцию и пройти процедуру подготовки к "Изъятию из карантинной зоны".
+
+Тогда он спросил её: "Из-за чего карантин?" и получил в ответ: "Какое сегодня число, боец?" Тогда он честно сказал, что не может вспомнить.
 
 Внимание постоянно соскальзывало в навязчивую мелодию.
 
 Ответом Директора стало:
 
-23.3.2011 в 13:15 Симург атаковала Китайский спутник. С его обломками она скрылась в Тихом Океане. 25.3.2011 в 9:00 спутник Дракон, заметил Симург покидающей Броктон-Бей. 
+"23.3.2011 в 13:15 Симург атаковала Китайский спутник. С его обломками она скрылась в Тихом Океане. 25.3.2011 в 9:00 спутник Дракон заметил Симург, покидающей Броктон-Бей".
